claim based authorization

--- a/AspNetCoreIdentity.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreIdentity.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -20,11 +20,25 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="Admin" asp-controller="Home" asp-action="Index">Ansayfa</a>
+                            <a class="nav-link " asp-area="Admin" asp-controller="Home" asp-action="Index">Admin Anasayfa</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="Admin" asp-controller="Home" asp-action="UserList">Kullanıcı Listesi</a>
+                            <a class="nav-link " asp-area="Admin" asp-controller="Home" asp-action="UserList">Üye liste</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link " asp-area="" asp-controller="Home" asp-action="INdex">Ana Sayfaya dön</a>
+                        </li>
+
+                          <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        Roller
+                            </a>
+                              <ul class="dropdown-menu">
+                                <li><a class="dropdown-item" asp-area="admin"  asp-controller="Roles" asp-action="Index">Tüm roller</a></li>
+                       
+                              </ul>
+                            </li>
                     </ul>
                 </div>
             </div>
