--- a/AspNetCoreIdentity.Web/Views/Shared/_NavbarLogin.cshtml
+++ b/AspNetCoreIdentity.Web/Views/Shared/_NavbarLogin.cshtml
@@ -6,6 +6,10 @@
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                              @User.Identity.Name</a>
                          <ul class="dropdown-menu">
+                             <li><a class="dropdown-item" asp-controller="Member" asp-action="Index">Profil</a></li>
+                             <li><a class="dropdown-item" asp-controller="Member" asp-action="PasswordChange">Parola Değiştir</a></li>
+                             <li><a class="dropdown-item" asp-controller="Member" asp-action="UserEdit">Kullanıcı Güncelle</a></li>
+                             <li><a class="dropdown-item" asp-controller="Member" asp-action="Claims">Claims</a></li>
                              <li><a class="dropdown-item" asp-route-returnurl="/Home/Index" asp-controller="Member" asp-action="logout">Çıkış yap</a></li>
                          </ul>
                   </li>
