--- a/AspNetCoreIdentity.Web/Views/_ViewImports.cshtml
+++ b/AspNetCoreIdentity.Web/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using AspNetCoreIdentity.Web.Models
 @using AspNetCoreIdentity.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AspNetCoreIdentity.Web
