--- a/AspNetCoreIdentity.Web/Areas/Admin/Views/Home/UserList.cshtml
+++ b/AspNetCoreIdentity.Web/Areas/Admin/Views/Home/UserList.cshtml
@@ -13,6 +13,8 @@
       <th scope="col">#</th>
       <th scope="col">User Name</th>
       <th scope="col">Email</th>
+      <th scope="col">Roller</th>
+      <th scope="col">Rol işlemleri</th>
     </tr>
   </thead>
   <tbody>
@@ -20,10 +22,14 @@
       @foreach (var item in Model)
         {
            <tr>
-              <th scope="row">1</th>
-              <td>@item.Id>td>
+
+              <td>@item.Id</td>
               <td>@item.Name</td>
               <td>@item.Email</td>
+             <td>
+                  <user-role-names user-id="@item.Id"></user-role-names>
+                </td>
+              <td><a asp-area="admin" asp-controller="Roles" asp-action="AssingRoleTouser" asp-route-id="@item.Id">Rol ata</a></td>
             </tr>        
         }
  
