--- a/AspNetCoreIdentity.Web/Areas/Admin/Views/_ViewImports.cshtml
+++ b/AspNetCoreIdentity.Web/Areas/Admin/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using AspNetCoreIdentity.Web.Models
 @using AspNetCoreIdentity.Web.Areas.Admin.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, AspNetCoreIdentity.Web
