--- a/AspNetCoreIdentity.Web/Views/Home/SingUp.cshtml
+++ b/AspNetCoreIdentity.Web/Views/Home/SingUp.cshtml
@@ -52,7 +52,7 @@
                  <span class=" text-danger" asp-validation-for="PasswordConfirm"></span>
               </div>
 
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <button type="submit" class="btn btn-primary">Kayıt Ol</button>
         </form>
 
     </div>
