--- a/AspNetCoreIdentity.Web/Views/Member/Index.cshtml
+++ b/AspNetCoreIdentity.Web/Views/Member/Index.cshtml
@@ -2,6 +2,33 @@
 @{
     ViewData["Title"] = "Index";
 }
+@model UserViewModel
+<h1>Kullanıcı Bilgileri</h1>
 
-<h1>Hoşgeldin @User.Identity!.Name</h1>
+<div class="row">
+    <div class="col-md-6 offset-md-4">
+       <user-picture-thumbnail class="rounded" style="width:300px"  picture-url="@Model.PictureUrl"></user-picture-thumbnail>
+    </div>
+</div>
+<div class="col-md-6 offset-3">
 
+
+    <table class="table">
+  <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">UserName</th>
+      <th scope="col">Email</th>
+      <th scope="col">Phone</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th scope="row">1</th>
+      <td>@Model.UserName</td>
+      <td>@Model.Email</td>
+      <td>@Model.PhoneNumber</td>
+    </tr>
+  </tbody>
+</table>
+</div>
