--- a/AspNetCoreIdentity.Web/Views/Shared/_Layout.cshtml
+++ b/AspNetCoreIdentity.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using System.Security.Claims;
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -22,10 +23,17 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
+                        @if ( User.HasClaim(x =>x.Type==ClaimTypes.Role && x.Value == "admin")){
+
+                           <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="Admin" asp-controller="Home" asp-action="Index">Admin Paneli</a>
                         </li>
+                        }
+                        
                           
+                           <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Member" asp-action="AnkaraPage">Ankara Sayfası</a>
+                        </li>
                     </ul>
                 <partial name="_NavbarLogin"></partial>
              
